--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,12 @@
 *::after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
-
+  @font-face {
+    font-family: "Capsmall";
+    src: url("../fonts/flaticon/font/Capsmall.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
 html {
   font-family: sans-serif;
   line-height: 1.15;
@@ -8375,7 +8380,7 @@ a {
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   line-height: 1.5;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgb(160, 160, 180);
   font-weight: 400; }
 
 .text-primary {
@@ -8556,6 +8561,11 @@ h1, h2, h3, h4, h5,
 .navbar-brand {
   font-weight: 700;
   font-size: 24px; }
+
+.navbar-brand .logo-img {
+  max-height: 40px;
+  width: auto;
+  vertical-align: middle; }
 
 .hero-wrap {
   width: 100%;
@@ -8740,6 +8750,7 @@ h1, h2, h3, h4, h5,
                 padding-right: 0;
                 font-size: 26px; } }
         .owl-carousel.home-slider .slider-item .slider-text h1 {
+          font-family: "Capsmall";
           font-size: 40px;
           text-transform: uppercase;
           color: #fff;
@@ -8862,7 +8873,7 @@ h1, h2, h3, h4, h5,
     text-transform: uppercase;
     font-weight: 400;
     font-size: 14px;
-    color: rgba(255, 255, 255, 0.9); }
+    color: #d1002c; }
   .request-quote .bg-primary {
     padding: 2em; }
   .request-quote h3 {
@@ -8944,6 +8955,7 @@ h1, h2, h3, h4, h5,
 
 .ftco-section {
   padding: 12em 0;
+  background-color: #000;
   position: relative;
   z-index: 0; }
   @media (max-width: 767.98px) {
@@ -8959,7 +8971,7 @@ h1, h2, h3, h4, h5,
       position: absolute;
       content: '';
       height: 50px;
-      background: #fff !important;
+      background: #222422 !important;
       z-index: 2;
       bottom: -25px; }
     .ftco-section .degree-left:before {
@@ -9009,7 +9021,7 @@ h1, h2, h3, h4, h5,
       /* Standard syntax */ }
 
 .bg-light {
-  background: #f3f3f3 !important;
+  background: #000 !important;
   position: relative;
   padding-bottom: 15em;
   z-index: 0;
@@ -9045,7 +9057,7 @@ h1, h2, h3, h4, h5,
     position: absolute;
     content: '';
     height: 50px;
-    background: #fff !important;
+    background: #222422 !important;
     z-index: 2;
     bottom: -25px; }
   .degree-right:before {
@@ -9393,7 +9405,7 @@ textarea.form-control {
       font-size: 28px; } }
 
 .heading-section.heading-section-white .subheading {
-  color: rgba(255, 255, 255, 0.9); }
+  color: #d1002c; }
 
 .heading-section.heading-section-white h2 {
   font-size: 40px;
@@ -9425,7 +9437,7 @@ textarea.form-control {
       display: block;
       font-size: 12px;
       letter-spacing: 3px;
-      color: #000000;
+      color: #d1002c;
       font-weight: 600; }
     .portfolio-wrap .text h2 {
       font-size: 40px;
@@ -9436,7 +9448,7 @@ textarea.form-control {
         .portfolio-wrap .text h2 {
           font-size: 9vw; } }
       .portfolio-wrap .text h2 a {
-        color: #000000;
+        color: #0f5132;
         padding-bottom: 5px; }
     .portfolio-wrap .text .desc {
       position: relative;
@@ -9920,7 +9932,7 @@ textarea.form-control {
     margin-bottom: 0; }
     .dbox p span {
       font-weight: 500;
-      color: #000000; }
+      color: rgb(160, 160, 180); }
     .dbox p a {
       color: #d1002c; }
   .dbox .icon {
